--- a/src/app/solid/solid.page.html
+++ b/src/app/solid/solid.page.html
@@ -1,5 +1,71 @@
 <ion-content [fullscreen]="true">
-  <h1>Автосалон</h1>
+  <ion-header>
+    <ion-toolbar>
+      <ion-title class="centered-title">Автосалон</ion-title>
+    </ion-toolbar>
+  </ion-header>
+
+  <!-- Фільтрація за типом транспорту -->
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Оберіть тип транспорту:</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-segment
+        [(ngModel)]="selectedType"
+        (ionChange)="onChangeType($event.detail.value)"
+      >
+        <ion-segment-button *ngFor="let type of types" [value]="type">
+          <ion-label>{{ type }}</ion-label>
+        </ion-segment-button>
+      </ion-segment>
+    </ion-card-content>
+  </ion-card>
+
+  <!-- Фільтрація за ціною -->
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Оберіть діапазон ціни:</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-range
+        min="0"
+        max="100000"
+        step="1000"
+        [(ngModel)]="selectedPriceRange"
+        (ionChange)="onChangePriceRange()"
+      >
+        <ion-label slot="start">0$</ion-label>
+        <ion-label slot="end">100000$</ion-label>
+      </ion-range>
+      <!-- Відображення вибраного значення -->
+      <ion-item>
+        <ion-label>Вибрана ціна: до {{ selectedPriceRange }}$</ion-label>
+      </ion-item>
+    </ion-card-content>
+  </ion-card>
+
+  <!-- Відображення результатів -->
+  <ion-card *ngFor="let vehicle of filteredVehicles; let i = index">
+    <ion-card-header>
+      <ion-card-title>
+        {{ vehicle.getBrand() }} {{ vehicle.getModel() }} {{ vehicle.getYear()
+        }}
+      </ion-card-title>
+      <ion-card-subtitle>{{ vehicle.getType() }}</ion-card-subtitle>
+      <ion-card-title>{{ vehicle.getPrice() }}$</ion-card-title>
+    </ion-card-header>
+    <ion-button>Купити</ion-button>
+    <ion-button (click)="openEditForm(i)">Редагувати</ion-button>
+    <ion-button (click)="removeVehicle(vehicle)">Видалити</ion-button>
+
+    <app-edit-vehicle
+      *ngIf="showEditVehicleModal && editIndex === i"
+      [vehicle]="vehicle"
+      (vehicleEdit)="editVehicle($event, i)"
+    >
+    </app-edit-vehicle>
+  </ion-card>
 
   <ion-card>
     <ion-card-header>
@@ -13,29 +79,5 @@
       >
       </app-add-vehicle>
     </ion-card-content>
-  </ion-card>
-
-  <ion-card *ngFor="let vehicle of vehicles; let i = index" class="course-card">
-    <ion-card-header>
-      <ion-card-title
-        >{{ vehicle.getBrand() }} {{ vehicle.getModel() }} {{ vehicle.getYear()
-        }}</ion-card-title
-      >
-      <ion-card-subtitle>{{ vehicle.getType() }}</ion-card-subtitle>
-      <ion-card-title>{{ vehicle.getPrice() }}$</ion-card-title>
-    </ion-card-header>
-    <ion-button>Купити</ion-button>
-
-    <div>
-      <ion-button (click)="openEditForm(i)">Редагувати</ion-button>
-      <ion-button (click)="removeVehicle(vehicle)">Видалити</ion-button>
-    </div>
-
-    <app-edit-vehicle
-      *ngIf="showEditVehicleModal && editIndex === i"
-      [vehicle]="vehicle"
-      (vehicleEdit)="editVehicle($event, i)"
-    >
-    </app-edit-vehicle>
   </ion-card>
 </ion-content>
